Revision history for DBIx::Class::Sims (ordered by revision number).

0.000005
  - Add "types" command to list available Sims types
  - Return and use a --seed
  - Add support for --model
    - Supports <table> -> columns -> <column> -> { sim => <value> }
    - Supports <table> -> columns -> <column> -> { type => <name> }
  - Improve packaging to include Dockerfile and Changes in /opt/docker

0.000004
  - Improve response time for listing drivers by 90%
    - This improves performance of all functionality because everything checks
      the driver against the list of installed drivers.

0.000003
  - Initial release to DockerHub.