@@ -2,11 +2,7 @@
     [X] Return the seed
     [X] Accept the seed
     [ ] Test reuse of the seed (Blocked on retrieving values from fork_subtest)
-[X] Add a command to show all available sims types
 [-] model file modifying DBIC::SL
-    [ ] Column nullchance
-        [ ] Set a nullable column to nullchance
-        [ ] Throw an error when setting a not-null column with a nullchance
     [ ] Relationships (has_many / belongs_to)
         [ ] Validate the foreign source exists
         [ ] Validate the columns exist
@@ -15,13 +11,18 @@
     [ ] Unique Constraints
         [ ] Validate the column(s) exist
         [ ] Add a multi-column unique constraint
-    [ ] Columns
-        [ ] Set a value to an array of scalars
-            * Unsupported by Sims
+    [/] Columns
+        [/] Set a value to an array of scalars (Unsupported by Sims)
+    [ ] Column nullchance
+        [ ] Set a nullable column to nullchance
+        [ ] Throw an error when setting a not-null column with a nullchance
+    [ ] constraints file
+        [ ] child requirements
 [ ] Write documentation
     * This is done via direct edit on DockerHub.
     * Can we automate this like github.com/docker-library/docs?
 [ ] Write a test that demonstrates a multi-column relationship
+[ ] Write a test that demonstrates a multi-column primary key
 [ ] Write a test that demonstrates a M2M relationship
     [ ] ... with the PK on the FKs and an extra value on the crosstable.
     [ ] ... with the PK on the FKs + the extra value
@@ -40,7 +41,6 @@
     [ ] Others?
 [ ] Test with database-specific column types
     [ ] Postgres JSON
-[ ] constraints file passed to $opts->{constraints}
 [ ] All parameters should be settable by ENVVAR
     * SIMS_LOADER_XYZ
     * --base-directory works like this, but by hand
@@ -113,6 +113,7 @@ load_sims CMD \
     * This works by hand with Sims 0.300402
 [X] Throw an error when the schema is empty or unset.
 [X] Validate that a command was passed, otherwise default to "help"
+[X] "types" to list installed Sims types
 [X] model file modifying DBIC::SL
     [X] Validate all sources exist by model name
         * Will not support model by table name
