@@ -2,6 +2,7 @@ Revision history for DBIx::Class::Sims (ordered by revision number).
 
 0.000005
   - Add "types" command to list available Sims types
+  - "model" now displays unique constraints (including PK)
   - Return and use a --seed
   - Add support for --model
     - Supports <table> -> columns -> <column> -> { sim => <value> }
